Change scrollbar system - Updated overlays - Corrected bug on resize event (user grid always displayed) - Corrected bug on multiple click on Admin checkbox

--- a/trunk/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.homebox.css
+++ b/trunk/DEBUG/debug-20-07-2012/src/Scube/BaseBundle/Resources/public/css/core.homebox.css
@@ -6,7 +6,7 @@
 	background:whiteSmoke;
 	border:2px solid #8eb218;
 	display:none;
-	z-index:150;
+	z-index:190;
 	padding-bottom:10px;
 }
 #home_box h1
